[+] Fixed leaking div causing horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,11 @@ h1{
 #Experience{
   background-image:url("../pictures/junctionbox.png")
 }
+#socialmedia{
+  width:auto;
+  padding-top: 5rem;
+  margin-right: auto;
+}
 /* Classes*/
 .full-section{
   min-height: 100vh;
